# 2022_2_c_plus_minus

./: .clang-format  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md
.github/workflows/: CI.yml
graphics/: CMakeLists.txt  graphics.cpp
project/: CMakeLists.txt
project/client/: CMakeLists.txt  main.cpp
project/client/graphics/: CMakeLists.txt  GUIObj.cpp  GUIObj.hpp  GameUi.cpp  GameUi.hpp  Graphics.cpp  Handler.hpp  README.md  SetupBoard.cpp  SetupBoard.hpp  SetupLogin.cpp  SetupLogin.hpp  graphics.cpp  guiobj.cpp  guiobj.hpp  setup.cpp  setup.hpp
project/client/include/: Chan.hpp  Client.hpp  Connection.hpp  GameState.hpp  GameUi.hpp  TextDrawer.hpp
project/client/include/graphics/: CMakeLists.txt  GUIObj.hpp  SetupBoard.hpp
project/client/include/tabulate/: asciidoc_exporter.hpp  cell.hpp  column.hpp  column_format.hpp  exporter.hpp  font_style.hpp  format.hpp  latex_exporter.hpp  markdown_exporter.hpp  optional_lite.hpp  printer.hpp  row.hpp  string_view_lite.hpp  table.hpp  table_internal.hpp  termcolor.hpp  utf8.hpp  variant_lite.hpp
project/client/src/: Chan.cpp  Client.cpp  GameUi.cpp  SetupBoard.cpp
project/client/tests/: CMakeLists.txt  main.cpp  test.cpp
project/general/: CMakeLists.txt
project/general/buffer/include/: Buffer.hpp
project/general/buffer/src/: Buffer.cpp
project/general/logger/include/: Logger.hpp
project/general/message/include/: Base.hpp  ErrorResponse.hpp  GameRequest.hpp  GameResponse.hpp  Message.hpp  Request.hpp  Response.hpp  RoomRequest.hpp  RoomResponse.hpp
project/general/message/src/: Base.cpp  Request.cpp
project/general/safe_queue/include/: SafeQueue.hpp
project/general/task/include/: Task.hpp
project/general/task/src/: Task.cpp
project/general/user/include/: User.h  User.hpp
project/general/user/src/: User.cpp
project/general/write_buffer/include/: WriteBuffer.hpp
project/server/: CMakeLists.txt  main.cpp
project/server/database_lib/: CMakeLists.txt
project/server/database_lib/include/: db_header.h
project/server/database_lib/include/impl/: DbConnection.hpp  DbManager.hpp  DbMethods.hpp  DbTaskImpl.hpp  DbUserImpl.hpp  DbWorker.hpp
project/server/database_lib/include/interface/: DbTask.hpp  DbUser.hpp
project/server/database_lib/src/: src.cpp
project/server/database_lib/tests/: CMakeLists.txt
project/server/server_lib/: CMakeLists.txt
project/server/server_lib/game_logic/: CMakeLists.txt
project/server/server_lib/game_logic/include/: Bishop.hpp  Figure.hpp  GameSession.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rock.hpp  Structures.hpp  Table.hpp
project/server/server_lib/game_logic/src/: Bishop.cpp  GameSession.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rock.cpp  Structures.cpp  Table.cpp
project/server/server_lib/game_logic/tests/: CMakeLists.txt  main.cpp  test.cpp
project/server/server_lib/network/: CMakeLists.txt
project/server/server_lib/network/connection/include/: ClientData.hpp  Connection.h  Connection.hpp  ConnectionHandler.h  ConnectionHandlerImpl.h  NewConnection.h
project/server/server_lib/network/connection/include/impl/: ConnectionImpl.hpp
project/server/server_lib/network/connection/include/interface/: Connection.hpp
project/server/server_lib/network/connection/src/: Connection.cpp  src.cpp
project/server/server_lib/network/handlers/include/impl/: GameHandler.hpp  HandlerImpl.hpp  RoomHandler.hpp
project/server/server_lib/network/handlers/include/interface/: Handler.hpp
project/server/server_lib/network/handlers/src/: HandlerImpl.cpp
project/server/server_lib/network/room/include/impl/: BasicMenu.hpp  Controller.hpp  Game.hpp  GameRoomImpl.hpp  Room.hpp  RoomImpl.hpp  RoomManager.hpp
project/server/server_lib/network/room/include/interface/: Room.hpp  RoomInterface.hpp
project/server/server_lib/network/room/src/: BasicMenu.cpp  Game.cpp  Room.cpp  RoomManager.cpp  src.cpp
project/server/server_lib/network/router/include/: Router.hpp
project/server/server_lib/network/router/src/: Router.cpp
project/server/server_lib/network/server/include/: Server.h  Server.hpp  ServerImpl.h  ServerImplDeleter.h  ServerImplDeleter.hpp
project/server/server_lib/network/server/include/impl/: ServerImpl.hpp
project/server/server_lib/network/server/include/interface/: Server.hpp
project/server/server_lib/network/server/src/: SereverImpl.cpp  Server.cpp  ServerImplDeleter.cpp
project/server/server_lib/network/session/include/impl/: SessionImpl.hpp
project/server/server_lib/network/session/include/interface/: Session.hpp
project/server/server_lib/network/session/src/: Session.cpp
project/server/server_lib/network/tests/: CMakeLists.txt  test.cpp
project/server/server_lib/tests/: CMakeLists.txt  main.cpp  test.cpp
project/server/src/: src.cpp
project/server/tests/: CMakeLists.txt  main.cpp
scripts/: build.sh  coverage.sh  format.sh  linters.sh  valgrind.sh
tests/: CMakeLists.txt  main.cpp  test.cpp
utils/: CMakeLists.txt  example.h
